--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html lang="en">
 <head>
+    <style>
+        h1{
+            color: springgreen;
+        }
+        h2{
+            color: greenyellow;
+        }
+    </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,5 +15,6 @@
 </head>
 <body>
     <h1>this is heading</h1>
+    <h2>this is heading</h2>
 </body>
 </html>
